// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-enabled Renders \`c-enabled\` correctly. 1`] = `
<span>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light error--text"
  >
    cancel
  </i>
</span>
`;

exports[`c-enabled Renders \`c-enabled\` with enabled prop correctly. 1`] = `
<span>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light primary--text"
  >
    check_circle
  </i>
</span>
`;
